--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   </head>
   <body>
     <div id="playground"></div>
-    <div id="main">
-    <div id="header">Drag me!</div>
+    <div id="main" class="resizable">
+      <div class='resizers'>
+        <div class='resizer top'></div>
+        <div class='resizer bottom'></div>
+        <div class='resizer left'></div>
+        <div class='resizer right'></div>
+        <div class='resizer top-left'></div>
+        <div class='resizer top-right'></div>
+        <div class='resizer bottom-left'></div>
+        <div class='resizer bottom-right'></div>
+        <div id="header">Drag me!</div>
+      </div>
     </div>
     
     <script src="index.js"></script>
